--- a/templates/detail.html
+++ b/templates/detail.html
@@ -20,7 +20,7 @@
     <h1>Một số đánh giá của khách hàng:</h1>
     <div class="comment">
         {% for comment in comments %}
-            <h3 class="comment-header">{{comment[2]}}</h3>
+            <h3>{{comment[2]}}</h3>
             <p>Ngày tháng: {{comment[3]}}</p>
             <p>Cảm nhận khách hàng: {{comment[4]}}</p>
             <p>Đánh giá: {{comment[6]}}</p>
